docs: add data dictionary and refine data understanding narrative

--- a/notebooks/01_business_understanding.ipynb
+++ b/notebooks/01_business_understanding.ipynb
@@ -5,9 +5,9 @@
    "id": "42e0f5fe-6c77-410b-9ed7-b14bf05fed6f",
    "metadata": {},
    "source": [
-    "# Análise da Folha de Pagamento – Prefeitura de Santa Rita do Passa Quatro (2025)\n",
+    "# Análise da Folha de Pagamento – Prefeitura de Santa Rita do Passa Quatro/SP (2025)\n",
     "\n",
-    "## Fase 1 – Business Understanding (CRISP-DM)\n",
+    "## Business Understanding (CRISP-DM)\n",
     "\n",
     "Este projeto tem como objetivo realizar uma análise exploratória e modelagem\n",
     "dos dados da folha de pagamento dos servidores públicos da Prefeitura de\n",
@@ -27,6 +27,9 @@
     "A disponibilização de dados públicos por meio do Portal da Transparência\n",
     "permite analisar como os recursos públicos são utilizados, especialmente\n",
     "no que se refere aos gastos com pessoal.\n",
+    "\n",
+    "Link do Portal da Transparência:\n",
+    "- https://www.transparencia.prefsrpq.com.br/transparencia/\n",
     "\n",
     "A análise desses dados possibilita compreender a estrutura de remuneração\n",
     "dos servidores públicos municipais, identificar padrões, assim como\n",
