--- a/notebooks/02_data_understanding.ipynb
+++ b/notebooks/02_data_understanding.ipynb
@@ -5,9 +5,9 @@
    "id": "47d3fffd-c9f0-4877-aaba-570f98319dc2",
    "metadata": {},
    "source": [
-    "# 02 — Data Understanding (CRISP-DM)\n",
+    "# Data Understanding\n",
     "\n",
-    "Nesta etapa do CRISP-DM, o objetivo é **entender profundamente os dados disponíveis**,\n",
+    "Nesta etapa o objetivo é entender profundamente os dados disponíveis,\n",
     "avaliando sua estrutura, qualidade, volume e possíveis limitações.\n",
     "\n",
     "Não há, neste momento, qualquer tipo de tratamento ou limpeza dos dados.\n",
@@ -33,13 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "025ba5ff-4b35-4712-9ecd-759f8723ea8c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Definindo quantas colunas o pandas irá exibir\n",
     "pd.set_option(\"display.max_columns\", 100)\n",
+    "\n",
+    "# Definindo como números float serão exibidos (2 casas decimais)\n",
     "pd.set_option(\"display.float_format\", lambda x: f\"{x:,.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb2c8f1f-964d-445e-b7c3-2a5eacb7a1e4",
+   "metadata": {},
+   "source": [
+    "- Lendo os arquivos CSV"
    ]
   },
   {
@@ -72,8 +83,6 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
     "DATA_RAW_PATH = Path(\"../data/raw\")\n",
     "\n",
     "csv_files = sorted(DATA_RAW_PATH.glob(\"*.csv\"))\n",
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "9d5bd82e-6dac-4bb9-bc7b-6ff25ef4d430",
    "metadata": {},
    "outputs": [
@@ -93,7 +102,7 @@
        "(24009, 16)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,6 +118,29 @@
     "df_raw = pd.concat(dfs, ignore_index=True)\n",
     "\n",
     "df_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "079fd36e-8e26-4aa1-af3e-3e51f5b68958",
+   "metadata": {},
+   "source": [
+    "Após importar todos os arquivos \".csv\" e concatenar todos em um único dataframe, ficamos com **24009 linhas** e **16 colunas**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c62bc04-402b-4b93-8f4a-c646db3dbe3d",
+   "metadata": {},
+   "source": [
+    "## Observações sobre codificação dos arquivos\n",
+    "\n",
+    "Durante a ingestão dos dados, foi identificado que os arquivos CSV\n",
+    "não utilizam codificação UTF-8, resultando em erros de leitura.\n",
+    "\n",
+    "Após análise, foi adotada a codificação `latin1`, comum em dados\n",
+    "oriundos de sistemas legados da administração pública brasileira,\n",
+    "permitindo a correta leitura de caracteres acentuados.\n"
    ]
   },
   {
@@ -495,17 +527,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c62bc04-402b-4b93-8f4a-c646db3dbe3d",
+   "id": "54728ca7-7ae0-4020-be1a-dd12593137a2",
    "metadata": {},
    "source": [
-    "## Observações sobre codificação dos arquivos\n",
+    "## Dicionário de dados\n",
     "\n",
-    "Durante a ingestão dos dados, foi identificado que os arquivos CSV\n",
-    "não utilizam codificação UTF-8, resultando em erros de leitura.\n",
+    "- **Referência**: Indica o tipo de pagamento realizado e o mês de referência da folha.\n",
     "\n",
-    "Após análise, foi adotada a codificação `latin1`, comum em dados\n",
-    "oriundos de sistemas legados da administração pública brasileira,\n",
-    "permitindo a correta leitura de caracteres acentuados.\n"
+    "- **Nome**: Nome completo do servidor público.\n",
+    "\n",
+    "- **Cargo**: Cargo ocupado pelo servidor no período analisado.\n",
+    "\n",
+    "- **Data Admissão**: Data de ingresso do servidor no quadro da prefeitura.\n",
+    "\n",
+    "- **Tipo de Regime**: Regime de Previdência Social ao qual o servidor está vinculado.\n",
+    "\n",
+    "- **Descontos**: Valor total de descontos aplicados diretamente no holerite do servidor.\n",
+    "\n",
+    "- **Liquido**: Valor líquido efetivamente recebido pelo servidor após os descontos.\n",
+    "\n",
+    "- **Data Desligamento**: Data de desligamento do servidor, quando aplicável.\n",
+    "\n",
+    "- **Proventos**: Valor bruto da remuneração do servidor antes da aplicação dos descontos.\n",
+    "\n",
+    "- **Contrato**: Código interno utilizado pelo sistema da prefeitura para identificação contratual.\n",
+    "\n",
+    "- **Atividade**: Código interno utilizado para classificar funções ou atividades específicas no sistema municipal.\n",
+    "\n",
+    "- **Nome Atividade**: Descrição textual da atividade ou função exercida pelo servidor.\n",
+    "\n",
+    "- **Tipo de Contrato**: Modalidade de vínculo do servidor com a prefeitura.\n",
+    "\n",
+    "- **Data Prevista Termino Contrato**: Data prevista para o encerramento do contrato, quando aplicável.\n",
+    "\n",
+    "- **Carga Horária (Sem.)**: Carga horária semanal de trabalho do servidor, expressa em horas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0aebf5a-b9e0-49ff-97bf-c742947a2963",
+   "metadata": {},
+   "source": [
+    "Observação: como podemos ver na última linha do dataframe, a última linha de cada mês é a soma total das seguintes colunas: Descontos, Liquido e Proventos. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f59578b-e89c-4551-b638-60b07e61eba0",
+   "metadata": {},
+   "source": [
+    "- Lendo apenas o cabeçalho de vários arquivos CSV e criando um dicionário que mapeia cada arquivo para o conjunto de colunas que ele possui."
    ]
   },
   {
@@ -714,6 +785,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "feca3366-007a-4722-8b64-e50db10648d4",
+   "metadata": {},
+   "source": [
+    "- Identificando quantas estruturas de colunas diferentes existem entre todos os arquivos CSV."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "13695b6e-6abd-4370-891f-73b4c6b56575",
@@ -736,41 +815,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "d07d41b5-42e9-433f-80f5-cb9f6d893775",
+   "cell_type": "markdown",
+   "id": "250d4d76-43ed-4d38-9807-b0f8cc644b73",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(24009, 16)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "path_raw = Path(\"../data/raw\")\n",
-    "\n",
-    "dfs = []\n",
-    "\n",
-    "for file in path_raw.glob(\"*.csv*\"):\n",
-    "    df = pd.read_csv(file, sep=\";\", encoding=\"latin1\")\n",
-    "    df[\"arquivo_origem\"] = file.name\n",
-    "    dfs.append(df)\n",
-    "\n",
-    "df_raw = pd.concat(dfs, ignore_index=True)\n",
-    "\n",
-    "df_raw.shape"
+    "Todos os arquivos têm exatamente o mesmo schema."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b37137a0-aa57-4ef5-a0bc-cd03e3f6f9a0",
+   "metadata": {},
+   "source": [
+    "- Colunas do dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f4f0f67e-371f-4ac0-a98d-3a4e92b970e6",
+   "execution_count": 8,
+   "id": "aeefec3d-3ca8-4051-bb3b-31992ae97b4d",
    "metadata": {},
    "outputs": [
     {
@@ -784,184 +847,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_raw.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "94999c5f-21ea-4890-96f1-7a89ba168b6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total de servidores únicos no ano: 980\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Contar servidores únicos\n",
-    "num_servidores = df_raw[\"Nome\"].nunique()\n",
-    "\n",
-    "print(f\"Total de servidores únicos no ano: {num_servidores}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "34c1dc8d-7729-4015-95a7-8bbe4b60283f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    ACACIO DONIZETTI DE OLIVEIRA\n",
-       "2               ADA ESTER ARCHILA\n",
-       "4         ADAO RODRIGUES DE JESUS\n",
-       "6               ADELINI PELINGRIN\n",
-       "8              ADEMILTON MONTEIRO\n",
-       "Name: Nome, dtype: object"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "servidores_unicos = df_raw[\"Nome\"].drop_duplicates().sort_values()\n",
-    "servidores_unicos.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "5e29944f-d978-40fb-9aea-e754dac82556",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Referência</th>\n",
-       "      <th>tipo_pagamento</th>\n",
-       "      <th>mes_nome</th>\n",
-       "      <th>mes_num</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Folha Complementar - Abril</td>\n",
-       "      <td>Folha Complementar</td>\n",
-       "      <td>Abril</td>\n",
-       "      <td>4.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Folha Mensal - Abril</td>\n",
-       "      <td>Folha Mensal</td>\n",
-       "      <td>Abril</td>\n",
-       "      <td>4.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Folha Complementar - Abril</td>\n",
-       "      <td>Folha Complementar</td>\n",
-       "      <td>Abril</td>\n",
-       "      <td>4.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Folha Mensal - Abril</td>\n",
-       "      <td>Folha Mensal</td>\n",
-       "      <td>Abril</td>\n",
-       "      <td>4.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Folha Complementar - Abril</td>\n",
-       "      <td>Folha Complementar</td>\n",
-       "      <td>Abril</td>\n",
-       "      <td>4.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Referência      tipo_pagamento mes_nome  mes_num\n",
-       "0  Folha Complementar - Abril  Folha Complementar    Abril     4.00\n",
-       "1        Folha Mensal - Abril        Folha Mensal    Abril     4.00\n",
-       "2  Folha Complementar - Abril  Folha Complementar    Abril     4.00\n",
-       "3        Folha Mensal - Abril        Folha Mensal    Abril     4.00\n",
-       "4  Folha Complementar - Abril  Folha Complementar    Abril     4.00"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Separar tipo de pagamento e mês\n",
-    "df_raw[[\"tipo_pagamento\", \"mes_nome\"]] = df_raw[\"Referência\"].str.split(\" - \", expand=True)\n",
-    "\n",
-    "# Mapear mês para número\n",
-    "mapa_meses = {\n",
-    "    \"Janeiro\": 1,\n",
-    "    \"Fevereiro\": 2,\n",
-    "    \"Março\": 3,\n",
-    "    \"Abril\": 4,\n",
-    "    \"Maio\": 5,\n",
-    "    \"Junho\": 6,\n",
-    "    \"Julho\": 7,\n",
-    "    \"Agosto\": 8,\n",
-    "    \"Setembro\": 9,\n",
-    "    \"Outubro\": 10,\n",
-    "    \"Novembro\": 11,\n",
-    "    \"Dezembro\": 12\n",
-    "}\n",
-    "\n",
-    "df_raw[\"mes_num\"] = df_raw[\"mes_nome\"].map(mapa_meses)\n",
-    "\n",
-    "# Conferir resultado\n",
-    "df_raw[[\"Referência\", \"tipo_pagamento\", \"mes_nome\", \"mes_num\"]].head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "5e48881c-d694-43f5-b222-69b6f80e4cc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_raw = df_raw[df_raw[\"Referência\"].notna()]"
    ]
   },
   {
