docs(data-preparation): document creation of flag_agente_politico

--- a/notebooks/03_data_preparation.ipynb
+++ b/notebooks/03_data_preparation.ipynb
@@ -3066,6 +3066,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb446509-51ad-43db-b37a-e5990ef5e148",
+   "metadata": {},
+   "source": [
+    "## Criação da flag de identificação de agentes políticos\n",
+    "\n",
+    "Durante a análise dos dados da folha de pagamento, observou-se que os cargos de **Prefeito** e **Vice-Prefeito** apresentam características administrativas e remuneratórias distintas dos demais servidores públicos, por se tratarem de **agentes políticos**. Além disso, esses cargos podem apresentar registros com datas de desligamento que não representam a saída efetiva do cargo, mas sim o encerramento administrativo de vínculos no sistema de folha.\n",
+    "\n",
+    "Para lidar adequadamente com essa particularidade, foi criada a variável auxiliar `flag_agente_politico`, com o objetivo de identificar registros referentes a cargos eletivos, sem removê-los da base de dados.\n",
+    "\n",
+    "A flag assume os seguintes valores:\n",
+    "- `True`: registros cujo cargo corresponde a Prefeito ou Vice-Prefeito\n",
+    "- `False`: demais servidores públicos\n",
+    "\n",
+    "Essa abordagem permite:\n",
+    "- Preservar a integridade do dataset original\n",
+    "- Aplicar regras específicas para agentes políticos de forma controlada\n",
+    "- Excluir esses cargos apenas em análises exploratórias e visualizações, quando necessário, evitando distorções estatísticas\n",
+    "- Diferenciar vínculos administrativos de mudanças reais de ocupação do cargo\n",
+    "\n",
+    "A identificação foi realizada a partir da coluna de cargo, utilizando correspondência textual para o termo “PrefEITO”, de modo a abranger variações como “Prefeito” e “Vice-Prefeito”.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "2c7217b5-9416-4a1e-931b-d04fdb332e21",
