--- a/notebooks/04_exploratory_data_analysis.ipynb
+++ b/notebooks/04_exploratory_data_analysis.ipynb
@@ -2951,7 +2951,7 @@
    "id": "c19a0236",
    "metadata": {},
    "source": [
-    "## Custo Mensal da Folha Salarial (Salário Base)\n",
+    "## Custo Mensal da Folha Salarial com Salário Base\n",
     "\n",
     "A tabela e o gráfico apresentados representam o custo mensal da folha salarial ao longo de 2025, considerando exclusivamente o salário base (folha_mensal), sem incluir benefícios, 13º salário, rescisões ou pagamentos extraordinários."
    ]
@@ -3161,7 +3161,134 @@
    "cell_type": "markdown",
    "id": "bb38b495",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Custo anual de 2025\n",
+    "\n",
+    "A análise a seguir busca identificar o custo total da prefeitura, contando todos os tipos de pagamentos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "b8fc837e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tipo_pagamento</th>\n",
+       "      <th>custo_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>folha_mensal</td>\n",
+       "      <td>49,147,851.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>11,054,312.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fechamento_13_salario</td>\n",
+       "      <td>3,679,897.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>rescisao</td>\n",
+       "      <td>1,665,228.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>adiantamento_13_salario</td>\n",
+       "      <td>1,574,564.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>folha_complementar_com_encargos</td>\n",
+       "      <td>107,209.73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    tipo_pagamento   custo_total\n",
+       "3                     folha_mensal 49,147,851.43\n",
+       "5                 vale_alimentacao 11,054,312.24\n",
+       "1            fechamento_13_salario  3,679,897.84\n",
+       "4                         rescisao  1,665,228.68\n",
+       "0          adiantamento_13_salario  1,574,564.20\n",
+       "2  folha_complementar_com_encargos    107,209.73"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gasto_por_tipo = (\n",
+    "    df_serv.groupby(\"tipo_pagamento\")[\"proventos\"]\n",
+    "    .sum()\n",
+    "    .reset_index(name=\"custo_total\")\n",
+    "    .sort_values(\"custo_total\", ascending=False)\n",
+    ")\n",
+    "\n",
+    "gasto_por_tipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "fa5494a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'R$ 67.229.064,12'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gasto_total_2025 = df_serv[\"proventos\"].sum()\n",
+    "gasto_total_2025_formatado = f\"R$ {gasto_total_2025:,.2f}\".replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\")\n",
+    "gasto_total_2025_formatado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53dc38ca",
+   "metadata": {},
+   "source": [
+    "O custo total do ano de 2025 foi de **R$ 67.229.064,12**."
+   ]
   }
  ],
  "metadata": {
