feat(eda): compute longest-tenured active employees by gender

--- a/notebooks/04_exploratory_data_analysis.ipynb
+++ b/notebooks/04_exploratory_data_analysis.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 146,
    "id": "fda20121-ab18-4f62-b31f-db9af557c6fa",
    "metadata": {},
    "outputs": [],
@@ -47,8 +47,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.ticker import FuncFormatter"
+    "from datetime import datetime\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -3834,6 +3834,144 @@
   {
    "cell_type": "markdown",
    "id": "a1c19db7",
+   "metadata": {},
+   "source": [
+    "## Servidores com Maior Tempo de Casa (Homem e Mulher)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "e715c08f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_ref = pd.to_datetime(\"2025-12-31\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "28e33e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ativos = df_serv[df_serv[\"data_desligamento\"].isna()].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "18209802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ativos[\"tempo_trabalho\"] = data_ref - df_ativos[\"data_admissao\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "e3e35935",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mais_antigo_m = df_ativos[df_ativos[\"sexo\"] == \"M\"].loc[\n",
+    "    lambda x: x[\"tempo_trabalho\"].idxmax()\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "34ab87f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mais_antigo_f = df_ativos[df_ativos[\"sexo\"] == \"F\"].loc[\n",
+    "    lambda x: x[\"tempo_trabalho\"].idxmax()\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "4f5c8823",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(id_servidor              5864b9eeaf90b14cd52abcf20cd95b1ace2dff55430403...\n",
+       " sexo                                                                     F\n",
+       " cargo                                                            PROFESSOR\n",
+       " categoria_cargo                                                   educacao\n",
+       " tipo_pagamento                                                folha_mensal\n",
+       " proventos                                                        13,074.29\n",
+       " descontos                                                         3,531.92\n",
+       " liquido                                                           9,542.37\n",
+       " carga_horaria_semanal                                                   30\n",
+       " data_admissao                                          1983-01-28 00:00:00\n",
+       " data_desligamento                                                      NaT\n",
+       " status_servidor                                                      ATIVO\n",
+       " mes                                                                    jan\n",
+       " tempo_trabalho                                         15678 days 00:00:00\n",
+       " Name: 567, dtype: object,\n",
+       " id_servidor              e7ca75da7ba841bbcf6e84eb6438eee7d3955d21d76a00...\n",
+       " sexo                                                                     M\n",
+       " cargo                                               AUXILIAR DE MANUTENCAO\n",
+       " categoria_cargo                                                operacional\n",
+       " tipo_pagamento                                            vale_alimentacao\n",
+       " proventos                                                         1,000.00\n",
+       " descontos                                                             0.00\n",
+       " liquido                                                           1,000.00\n",
+       " carga_horaria_semanal                                                   40\n",
+       " data_admissao                                          1979-05-01 00:00:00\n",
+       " data_desligamento                                                      NaT\n",
+       " status_servidor                                                      ATIVO\n",
+       " mes                                                                    jan\n",
+       " tempo_trabalho                                         17046 days 00:00:00\n",
+       " Name: 265, dtype: object)"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mais_antigo_f, mais_antigo_m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "9035b8fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O funcionário masculino mais antigo tem 47 anos de casa e é Auxiliar de Manutenção.\n",
+      "A funcionária feminina mais antiga tem 43 anos de casa e é Professora.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def converter_timedelta_para_anos(delta):\n",
+    "    return delta.days / 365\n",
+    "\n",
+    "anos_m = converter_timedelta_para_anos(mais_antigo_m[\"tempo_trabalho\"])\n",
+    "anos_f = converter_timedelta_para_anos(mais_antigo_f[\"tempo_trabalho\"])\n",
+    "\n",
+    "print(f\"O funcionário masculino mais antigo tem {anos_m:.0f} anos de casa e é Auxiliar de Manutenção.\")\n",
+    "print(f\"A funcionária feminina mais antiga tem {anos_f:.0f} anos de casa e é Professora.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4805a326",
    "metadata": {},
    "source": []
   }
