feat(eda): identify most recently hired active employees by gender

--- a/notebooks/04_exploratory_data_analysis.ipynb
+++ b/notebooks/04_exploratory_data_analysis.ipynb
@@ -3971,7 +3971,112 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4805a326",
+   "id": "94153357",
+   "metadata": {},
+   "source": [
+    "## Servidores com menor tempo de casa (Homem e Mulher)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "3024f259",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(id_servidor              91c5e268c2d0a14ce8ab68d03741f54739f3889ba653a6...\n",
+       " sexo                                                                     M\n",
+       " cargo                                                    ORIENTADOR SOCIAL\n",
+       " categoria_cargo                                         assistencia_social\n",
+       " tipo_pagamento                                                folha_mensal\n",
+       " proventos                                                         1,118.12\n",
+       " descontos                                                           482.05\n",
+       " liquido                                                             636.07\n",
+       " carga_horaria_semanal                                                   35\n",
+       " data_admissao                                          2025-12-15 00:00:00\n",
+       " data_desligamento                                                      NaT\n",
+       " status_servidor                                                      ATIVO\n",
+       " mes                                                                    dez\n",
+       " Name: 23602, dtype: object,\n",
+       " id_servidor              cbee9ee169c2f977f081c4a15447f6e796d9ac467d4e9e...\n",
+       " sexo                                                                     F\n",
+       " cargo                                                 AUXILIAR DE FARMACIA\n",
+       " categoria_cargo                                                      saude\n",
+       " tipo_pagamento                                                folha_mensal\n",
+       " proventos                                                         1,832.40\n",
+       " descontos                                                           584.10\n",
+       " liquido                                                           1,248.30\n",
+       " carga_horaria_semanal                                                   40\n",
+       " data_admissao                                          2025-12-11 00:00:00\n",
+       " data_desligamento                                                      NaT\n",
+       " status_servidor                                                      ATIVO\n",
+       " mes                                                                    dez\n",
+       " Name: 23948, dtype: object)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ativos (sem demissão)\n",
+    "df_ativos = df_serv[df_serv[\"data_desligamento\"].isna()].copy()\n",
+    "\n",
+    "# Mais recente (admissão mais nova) por sexo\n",
+    "mais_recente_m = df_ativos[df_ativos[\"sexo\"] == \"M\"].loc[\n",
+    "    lambda x: x[\"data_admissao\"].idxmax()\n",
+    "]\n",
+    "\n",
+    "mais_recente_f = df_ativos[df_ativos[\"sexo\"] == \"F\"].loc[\n",
+    "    lambda x: x[\"data_admissao\"].idxmax()\n",
+    "]\n",
+    "\n",
+    "mais_recente_m, mais_recente_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "30c86a6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Funcionário mais recente ativo: 2025-12-15 0.0\n",
+      "Funcionária mais recente ativa: 2025-12-11 0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_ref = pd.to_datetime(\"2025-12-31\")\n",
+    "\n",
+    "def anos_de_casa(data_adm, ref=data_ref):\n",
+    "    return (ref - data_adm).days / 365\n",
+    "\n",
+    "print(f\"Funcionário mais recente ativo: {mais_recente_m['data_admissao'].date()} \"\n",
+    "      f\"{anos_de_casa(mais_recente_m['data_admissao']):.1f}\")\n",
+    "\n",
+    "print(f\"Funcionária mais recente ativa: {mais_recente_f['data_admissao'].date()} \"\n",
+    "      f\"{anos_de_casa(mais_recente_f['data_admissao']):.1f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ea46930",
+   "metadata": {},
+   "source": [
+    "- Podemos concuir que ambos os funcionários ingressaram em dezembro na prefeitura.\n",
+    "- Até a data desta análise cada funcionário tem um pouco mais de 1 mês de tempo de trabalho na prefeitura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d03b5bd",
    "metadata": {},
    "source": []
   }
