docs: refine Business Understanding notebook with professional structure and clarity

--- a/notebooks/01_business_understanding.ipynb
+++ b/notebooks/01_business_understanding.ipynb
@@ -5,16 +5,15 @@
    "id": "42e0f5fe-6c77-410b-9ed7-b14bf05fed6f",
    "metadata": {},
    "source": [
-    "# Análise da Folha de Pagamento – Prefeitura de Santa Rita do Passa Quatro/SP (2025)\n",
+    "# Análise da Folha de Pagamento — Prefeitura de Santa Rita do Passa Quatro/SP (2025)\n",
     "\n",
-    "## Business Understanding (CRISP-DM)\n",
+    "## 01 — Business Understanding (CRISP-DM)\n",
     "\n",
-    "Este projeto tem como objetivo realizar uma análise exploratória e modelagem\n",
-    "dos dados da folha de pagamento dos servidores públicos da Prefeitura de\n",
-    "Santa Rita do Passa Quatro – SP, referentes ao ano de 2025.\n",
+    "Este projeto tem como objetivo analisar e transformar os dados da folha de pagamento dos servidores públicos da Prefeitura de **Santa Rita do Passa Quatro/SP**, referentes ao ano de **2025**, em informações claras, úteis e acionáveis.\n",
     "\n",
-    "A análise segue rigorosamente a metodologia **CRISP-DM**, amplamente utilizada\n",
-    "em projetos profissionais de Ciência de Dados.\n"
+    "Para garantir estrutura, reprodutibilidade e rigor metodológico, o trabalho segue a metodologia **CRISP-DM (Cross-Industry Standard Process for Data Mining)**, amplamente adotada em projetos profissionais de Ciência de Dados.\n",
+    "\n",
+    "Nesta etapa inicial, definimos o **contexto**, os **objetivos de negócio**, as **questões investigativas** e os **critérios que orientarão as próximas fases** do projeto."
    ]
   },
   {
@@ -24,16 +23,14 @@
    "source": [
     "## Contexto do Negócio\n",
     "\n",
-    "A disponibilização de dados públicos por meio do Portal da Transparência\n",
-    "permite analisar como os recursos públicos são utilizados, especialmente\n",
-    "no que se refere aos gastos com pessoal.\n",
+    "A disponibilização de dados públicos por meio do **Portal da Transparência** permite avaliar como os recursos municipais são aplicados, especialmente no que diz respeito às despesas com **pessoal**, que representam uma das maiores parcelas do orçamento público.\n",
     "\n",
-    "Link do Portal da Transparência:\n",
-    "- https://www.transparencia.prefsrpq.com.br/transparencia/\n",
+    "Fonte dos dados:  \n",
+    "- Portal da Transparência — Prefeitura de Santa Rita do Passa Quatro/SP  \n",
+    "  https://www.transparencia.prefsrpq.com.br/transparencia/\n",
     "\n",
-    "A análise desses dados possibilita compreender a estrutura de remuneração\n",
-    "dos servidores públicos municipais, identificar padrões, assim como\n",
-    "potenciais distorções ou concentrações atípicas.\n"
+    "A análise estruturada dessa base possibilita compreender a **composição da folha de pagamento**, identificar **padrões de remuneração**, avaliar **distribuições por categoria funcional** e detectar eventuais **concentrações ou distorções** que possam indicar oportunidades de melhoria na gestão pública.\n",
+    "\n"
    ]
   },
   {
@@ -44,16 +41,16 @@
     "## Objetivos do Projeto\n",
     "\n",
     "### Objetivo Geral\n",
-    "Realizar uma análise exploratória completa da folha de pagamento de 2025,\n",
-    "extraindo insights relevantes por meio de estatística descritiva,\n",
-    "visualização de dados e técnicas de modelagem.\n",
+    "Realizar uma análise exploratória estruturada da folha de pagamento de **2025**, transformando os dados em **insights relevantes** por meio de estatística descritiva, visualização analítica e modelagem básica, garantindo rigor metodológico e reprodutibilidade.\n",
     "\n",
     "### Objetivos Específicos\n",
-    "- Analisar a distribuição dos salários dos servidores\n",
-    "- Avaliar diferenças de remuneração entre cargos e secretarias\n",
-    "- Investigar padrões temporais ao longo do ano\n",
-    "- Aplicar técnicas estatísticas e/ou de Machine Learning\n",
-    "- Garantir anonimização dos dados pessoais\n"
+    "- Mapear a **distribuição salarial** entre servidores e categorias funcionais.\n",
+    "- Avaliar diferenças de remuneração entre **áreas**, **secretarias** e **tipos de vínculo**.\n",
+    "- Investigar possíveis assimetrias relacionadas ao **gênero inferido**, categorias e níveis hierárquicos.\n",
+    "- Analisar padrões temporais ao longo do ano (variações mensais de remuneração e composição do quadro).\n",
+    "- Identificar o impacto de **cargos comissionados** no gasto total.\n",
+    "- Preparar uma base tratada e documentada, garantindo **anonimização** e adequação às boas práticas de transparência de dados públicos.\n",
+    "- Viabilizar etapas posteriores de modelagem ou construção de dashboards."
    ]
   },
   {
@@ -63,12 +60,14 @@
    "source": [
     "## Perguntas Analíticas\n",
     "\n",
-    "- Como se distribuem os salários dos servidores públicos?\n",
-    "- Quais cargos concentram os maiores gastos com pessoal?\n",
-    "- Existem diferenças salariais relevantes entre secretarias?\n",
-    "- Há evidências de sazonalidade ao longo do ano?\n",
-    "- Existem outliers salariais que merecem investigação?\n",
-    "- É possível agrupar servidores com perfis salariais semelhantes?\n"
+    "As questões abaixo orientam a exploração inicial dos dados e direcionam a geração de insights na etapa de EDA:\n",
+    "\n",
+    "- Como se distribuem os salários dos servidores públicos municipais em 2025?\n",
+    "- Quais cargos, categorias ou secretarias concentram o maior custo total de pessoal?\n",
+    "- Existem diferenças salariais relevantes entre áreas, níveis hierárquicos ou vínculos (efetivos, comissionados etc.)?\n",
+    "- Há variações ou padrões temporais significativos ao longo do ano (sazonalidade ou mudanças estruturais)?\n",
+    "- Existem **outliers** salariais que demandam investigação mais detalhada?\n",
+    "- A análise permite identificar agrupamentos naturais (clusters) de servidores com perfis semelhantes de remuneração?"
    ]
   },
   {
@@ -78,13 +77,19 @@
    "source": [
     "## Considerações Éticas e LGPD\n",
     "\n",
-    "Apesar de os dados serem públicos, este projeto adota boas práticas de\n",
-    "privacidade e ética, incluindo:\n",
+    "Embora os dados utilizados sejam **públicos** e disponibilizados oficialmente pelo Portal da Transparência, este projeto adota boas práticas de **privacidade, ética e conformidade com a LGPD**, incluindo:\n",
     "\n",
-    "- Anonimização dos nomes dos servidores públicos\n",
-    "- Não exposição de informações sensíveis\n",
-    "- Uso dos dados exclusivamente para fins educacionais e analíticos\n"
+    "- Anonimização de nomes e qualquer informação que possa identificar indivíduos.\n",
+    "- Não exposição de dados sensíveis ou inferências que possam causar constrangimento ou interpretação indevida.\n",
+    "- Uso dos dados exclusivamente para fins **educacionais**, **analíticos** e de **transparência pública**, sem finalidade comercial.\n",
+    "- Documentação clara das transformações aplicadas, garantindo rastreabilidade e respeito ao caráter público dos dados."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07e8b7d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
